parser/src/snapshots/long_parser__decl__decl_func.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl()

---
Ok(
    Located {
        inner: FuncDef(
            FuncDef {
                name: Ident(
                    "f",
                ),
                ty: FuncType {
                    ret: Int(
                        Signed,
                    ),
                },
            },
        ),
        loc: None:1:1,
    },
)
