parser/src/snapshots/long_parser__decl__decl_func2.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl()

---
Ok(
    Located {
        inner: FuncDef(
            FuncDef {
                name: Ident(
                    "ggg",
                ),
                ty: FuncType {
                    ret: Void,
                },
                body: BlockStmt(
                    [],
                ),
            },
        ),
        loc: None:1:1,
    },
)
