parser/src/snapshots/long_parser__decl__decl_spec_bool.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: Bool,
        loc: None:1:1,
    },
)
