parser/src/snapshots/long_parser__decl__decl_spec_char16.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: Char16(
            Signed,
        ),
        loc: None:1:1,
    },
)
