parser/src/snapshots/long_parser__decl__decl_spec_double.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: Double,
        loc: None:1:1,
    },
)
