parser/src/snapshots/long_parser__decl__decl_spec_empty.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Err(
    UnexpectedEof,
)
