parser/src/snapshots/long_parser__decl__decl_spec_float.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: Float,
        loc: None:1:1,
    },
)
