parser/src/snapshots/long_parser__decl__decl_spec_int.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: Int(
            Signed,
        ),
        loc: None:1:1,
    },
)
