parser/src/snapshots/long_parser__decl__decl_spec_long_long.snap
---
source: parser/src/decl.rs
expression: parser.parse_decl_specifier()

---
Ok(
    Located {
        inner: LongLong(
            Signed,
        ),
        loc: None:1:1,
    },
)
